log

Thu 14 Mar 2024 05:19:05 PM UTC: 
 exercises.c | 72 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 67 insertions(+), 5 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘inicializarLibro’:
exercises.c:116:12: error: ‘libro’ redeclared as different kind of symbol
  116 |     Libro *libro = (Libro *)malloc(sizeof(Libro));
      |            ^~~~~
exercises.c:113:30: note: previous definition of ‘libro’ with type ‘Libro *’
  113 | void inicializarLibro(Libro *libro, const char *titulo, const char *nombreAutor,
      |                       ~~~~~~~^~~~~
exercises.c:123:20: error: incompatible types when assigning to type ‘Autor’ from type ‘Autor *’
  123 |     libro->autor = (Autor *)malloc(sizeof(Autor));
      |                    ^
exercises.c:125:22: error: invalid operands to binary == (have ‘Autor’ and ‘void *’)
  125 |     if (libro->autor == NULL) exit(EXIT_FAILURE);
      |         ~~~~~~~~~~~~ ^~
      |              |
      |              Autor
exercises.c:127:24: error: invalid type argument of ‘->’ (have ‘Autor’)
  127 |     strcpy(libro->autor->nombre, nombreAutor);
      |                        ^~
exercises.c:128:12: error: ‘Libro’ has no member named ‘Autor’; did you mean ‘autor’?
  128 |     libro->Autor->anioNacimiento = anioNacimiento;
      |            ^~~~~
      |            autor
Compilation failed
ce4c72c
